--- a/stack.env
+++ b/stack.env
@@ -3,15 +3,22 @@ PGID=1000
 TZ=America/Los_Angeles
 LOCVOL1=/path/to/storage/
 CONNET=dbridge
-DOCKER_MODS=linuxserver/mods:universal-cron
-# You should really change these passwords
+
+### NPM ###
+# It's easier to run NPM as root/0
+NPM_PUID=0
+NPM_GUID=0
+
+# IPv6? true/false
+DISABLE_IPV6=true
+
+# DB info, NPM uses non-standard variables so we map it in the compose file
+MYSQL_HOST=npm-db
 MYSQL_ROOT_PASSWORD=npm
 MYSQL_DATABASE=npm
 MYSQL_USER=npm
 MYSQL_PASSWORD=npm
-DB_MYSQL_HOST=npm-db
-DB_MYSQL_PORT=3306
-DB_MYSQL_NAME=npm
-DB_MYSQL_USER=npm
-DB_MYSQL_PASSWORD=npm
-DISABLE_IPV6=true
+MYSQL_PORT=3306
+
+# Do we want any container mods? See: https://github.com/linuxserver/docker-mods
+DOCKER_MODS=linuxserver/mods:universal-cron
